added index.html changes

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
 						<!-- listings and map-->
 						<div class="row">
-
-							<div id="map" class="col-12"></div>
+							<div id="map" class="col-12">
+                            </div>
 						</div>
 
 						<script>
@@ -315,18 +315,15 @@
 	<footer class="bg-dark text-white py-4">
 		<div class="col-12 ml-auto text-center" id="social-links">
 
-			<a href="https://en-gb.facebook.com" target="_blank">
-				<!--Facebook-->
-				<i class="fab fa-facebook-f"></i>
-			</a>
-			<a href="https://www.instagram.com" target="_blank">
-				<!--Instagram-->
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="https://twitter.com" target="_blank">
-				<!--Twitter-->
-				<i class="fab fa-twitter"></i>
-			</a>
+			                    <a href="https://en-gb.facebook.com" target="_blank">       <!--Facebook-->
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">        <!--Instagram-->
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://twitter.com" target="_blank">              <!--Twitter-->
+                        <i class="fab fa-twitter"></i>
+                    </a>
 		</div>
 
 		<!-- Linked to github -->
