--- a/index.html
+++ b/index.html
@@ -180,8 +180,6 @@
 
                 </div>
                 <!--./container-->
-
-            </div>
 				<!--#/main-buttons-->
 
 						<!-- listings and map-->
@@ -256,7 +254,7 @@
 							</div>
 	</section>
 	</main>
-	<!--./ Booking End (will add email function once maps is done)-->
+	<!--./ Booking End -->
 	<!-- Modal -->
 	<div id="myModal" class="modal">
 		<div class="modal-content">
