added styling to form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
-    <script src="assets/js/email.js"></script>"
+	<script src="assets/js/email.js"></script>"
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>TheHighlandsBreak</title>
@@ -52,7 +52,7 @@
 	<section>
 		<div id="landingpicture">
 			<div class=" container text-center d-block w-100">
-                <h1>TheHighlandsBreak</h1>
+				<h1>TheHighlandsBreak</h1>
 				<p>A Scottish get away!</p>
 			</div>
 		</div>
@@ -146,10 +146,8 @@
 
 						<div class="form-group">
 							<input id="autocomplete" class="form-control" placeholder="Enter a city in Scotland" type="text" />
-                        </div>
-
-						</div>
-
+                                </div>
+						            </div>
 						<!--POI buttons-->
 						<div class="justify-content-center row">
 
@@ -162,58 +160,56 @@
 							<button id="attraction-button" type="submit" class="btn" onClick="onPlaceChanged('tourist_attraction')">         <!--Attractions button-->
                             <img src="assets/images/button-icons/monument.png" alt="Monument"><br>Attractions</button>
 
+						    </div>
+						<div class="row" id="map-container">
+							<div id="map" class="col-8"></div>
+							<div class="col-4">
+								<div class="justify-content-center row" id="info-window">
+									<div id="listing">
+										<table id="resultsTable">
+											<tbody id="results"></tbody>
+										</table>
+									</div>
+
+									<div style="display: none">
+										<div id="info-content">
+											<table>
+												<tr id="iw-url-row" class="iw_table_row">
+													<td id="iw-icon" class="iw_table_icon"></td>
+													<td id="iw-url"></td>
+												</tr>
+												<tr id="iw-address-row" class="iw_table_row">
+													<td class="iw_attribute_name">Address:</td>
+													<td id="iw-address"></td>
+												</tr>
+												<tr id="iw-phone-row" class="iw_table_row">
+													<td class="iw_attribute_name">Telephone:</td>
+													<td id="iw-phone"></td>
+												</tr>
+												<tr id="iw-rating-row" class="iw_table_row">
+													<td class="iw_attribute_name">Rating:</td>
+													<td id="iw-rating"></td>
+												</tr>
+												<tr id="iw-website-row" class="iw_table_row">
+													<td class="iw_attribute_name">Website:</td>
+													<td id="iw-website"></td>
+												</tr>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<!--./container-->
+			<!--#/main-buttons-->
 
-                            <div class="row" id="map-container">
-							    <div id="map" class="col-8"></div>
-                                <div class="col-4">
-                                    <div class="justify-content-center row" id="info-window">
-                                        <div id="listing">
-      <table id="resultsTable">
-        <tbody id="results"></tbody>
-      </table>
-    </div>
+			<!-- listings and map-->
 
-    <div style="display: none">
-      <div id="info-content">
-        <table>
-          <tr id="iw-url-row" class="iw_table_row">
-            <td id="iw-icon" class="iw_table_icon"></td>
-            <td id="iw-url"></td>
-          </tr>
-          <tr id="iw-address-row" class="iw_table_row">
-            <td class="iw_attribute_name">Address:</td>
-            <td id="iw-address"></td>
-          </tr>
-          <tr id="iw-phone-row" class="iw_table_row">
-            <td class="iw_attribute_name">Telephone:</td>
-            <td id="iw-phone"></td>
-          </tr>
-          <tr id="iw-rating-row" class="iw_table_row">
-            <td class="iw_attribute_name">Rating:</td>
-            <td id="iw-rating"></td>
-          </tr>
-          <tr id="iw-website-row" class="iw_table_row">
-            <td class="iw_attribute_name">Website:</td>
-            <td id="iw-website"></td>
-          </tr>
-        </table>
-      </div>
-    </div>
-
-                                    </div>
-                                    </div>
-                                </div>
-                        </div>
-                    </div>
-
-                </div>
-                <!--./container-->
-				<!--#/main-buttons-->
-
-						<!-- listings and map-->
-
-						<!-- <script>
+			<!-- <script>
 							function initMap() {
                                 var map = new google.maps.Map(document.getElementById("map"), {
                                     zoom: 6,
@@ -221,14 +217,14 @@
                                 });
                             }
 						</script> -->
-						<!--./ End of Map \-->
+			<!--./ End of Map \-->
 
-						<!--./row-->
+			<!--./row-->
 
-						<!--Info window-->
-					
-				
-					<!--./Display style for info window-->
+			<!--Info window-->
+
+
+			<!--./Display style for info window-->
 
 	</section>
 	<!--End of Find-->
@@ -305,34 +301,59 @@
 	<!--./modal-content-->
 
 	<!-- Footer -->
-	<footer class="bg-dark text-white py-4">
-		<div class="col-12 ml-auto text-center" id="social-links">
-            <a href="https://en-gb.facebook.com" target="_blank">       <!--Facebook-->
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://www.instagram.com" target="_blank">        <!--Instagram-->
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://twitter.com" target="_blank">              <!--Twitter-->
-                <i class="fab fa-twitter"></i>
-            </a>
-		</div>
-
+	<footer class="container-fluid text-center">
+                <div id="footer-details" class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-inline social-links">
+                            <li class="list-inline-item">
+                                <a target="_blank" rel="noopener" href="https://www.facebook.com">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" rel="noopener" href="https://www.twitter.com">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" rel="noopener" href="https://www.pinterest.co.uk/">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" rel="noopener" href="https://www.instagram.com">
+                            <i class="fa fa-instagram " aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" rel="noopener" href="https://www.youtube.com/">
+                            <i class="fa fa-youtube " aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 		<!-- Linked to github -->
-		<div class="col-12 text-center small">
+		    <div class="col-12 text-center small">
 			<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
 		</div>
 	</footer>
 	<!--./footer end -->
 
-    <!-- Javascript Libaries -->
+	<!-- Javascript Libaries -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&libraries=places&callback=initMap"
-    async defer></script>
-    <script>
-    $("#autocomplete").change(function() {
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&libraries=places&callback=initMap"
+		async defer></script>
+	<script>
+		$("#autocomplete").change(function() {
         if ($("#autocomplete").val() != "") {
             $("#map-container").show(1000);
         } else {
@@ -341,7 +362,7 @@
     });
 
     $("#map-container").hide();
-    </script>
+	</script>
 
 </body>
 
