--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-	<!-- Navigation -->
+	<!--Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandsBreak</a>
@@ -48,7 +48,9 @@
 			</div>
 		</div>
 	</nav>
-	<!--./ end of Navigation -->
+	<!--./ end of Navigation-->
+
+    <!-- Landing picture-->
 	<section>
 		<div id="landingpicture">
 			<div class=" container text-center d-block w-100">
@@ -57,7 +59,8 @@
 			</div>
 		</div>
 	</section>
-	<!-- About -->
+    <!--./ End of Landing picture-->
+
 	<!--About-->
 	<section>
 
@@ -74,9 +77,10 @@
 				find attractions, restaurants, bars and hotetls in Scotland.</p>
 
 		</div>
-		<!--./ End of About 
--->
-		<!-- Bootstrap/carousel -->
+	</section>
+		<!--./ End of About--> 
+
+		<!-- Bootstrap Carousel-->
 		<section>
 			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
@@ -117,7 +121,7 @@
 				</div>
 		</section>
 		<!--./ End of Carousel -->
-
+        <!--Find-->
 		<div id="find">
 			<a>&nbsp;</a>
 		</div>
@@ -133,8 +137,7 @@
 				by clicking on it's tile.</p>
 
 		</div>
-
-		<!-- #main-button wraps drop down and city input field-->
+		<!-- #mainbutton wraps drop down and city input field-->
 		<div id="main-buttons">
 			<div class="container">
 				<div class="justify-content-center">
@@ -161,6 +164,8 @@
                             <img src="assets/images/button-icons/monument.png" alt="Monument"><br>Attractions</button>
 
 						    </div>
+                        <!-- listing results from map-->
+
 						<div class="row" id="map-container">
 							<div id="map" class="col-8"></div>
 							<div class="col-4">
@@ -206,9 +211,7 @@
 			</div>
 			<!--./container-->
 			<!--#/main-buttons-->
-
-			<!-- listings and map-->
-
+            <!--map-->
 			<!-- <script>
 							function initMap() {
                                 var map = new google.maps.Map(document.getElementById("map"), {
@@ -218,16 +221,11 @@
                             }
 						</script> -->
 			<!--./ End of Map \-->
-
 			<!--./row-->
-
 			<!--Info window-->
-
-
 			<!--./Display style for info window-->
-
 	</section>
-	<!--End of Find-->
+	<!--./End of Find-->
 
 	<!--- Booking -->
 
@@ -280,6 +278,7 @@
 	</section>
 	</main>
 	<!--./ Booking End -->
+
 	<!-- Modal -->
 	<div id="myModal" class="modal">
 		<div class="modal-content">
@@ -293,9 +292,7 @@
 
 					<button id="close" class="btn text-uppercase" type="button">Close</button>
 				</div>
-
 			</div>
-			<!--./row-->
 		</div>
 	</div>
 	<!--./modal-content-->
@@ -363,7 +360,7 @@
 
     $("#map-container").hide();
 	</script>
-
+<!--./ Javascript Libaries End-->
 </body>
 
 </html>
