--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
-<!--	<script src="assets/js/email.js"></script>" -->
+    <script src="assets/js/email.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>TheHighlandsBreak</title>
@@ -22,18 +22,6 @@
         (function(){
            emailjs.init('user_7XVYOD9tVJ4WxyFxCtSC3');
         })();
-    </script>
-    <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                // generate the contact number value
-                this.contact_number.value = Math.random() * 100000 | 0;
-                console.log("Email sent?")
-                emailjs.sendForm('gmail', 'TheHighlandsBreak', this);
-                
-            });
-        }
     </script>
 </head>
 
