--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 				<div id="booking-form" class="row">
 
-					<form id="booking-form-form" onsubmit="return validateForm(this)" class="col-10 offset-1">
+					<form id="booking-form-form" class="col-10 offset-1">
 						<div class="form-group">
 							<label for="name">Name</label>
 							<input type="text" class="form-control" id="name" name="fromName" required/>
@@ -258,7 +258,7 @@
 										<textarea class="form-control" id="details" rows="3" name="message"></textarea>
 									</div>
 
-									<input id="submit-form" class="btn text-uppercase" value="Send message" type="submit"/>
+									<button type="submit" class="btn btn-primary">Send</button>
 
                     </form>
 
@@ -268,22 +268,24 @@
 		<!--./ Booking End -->
 
 		<!-- Modal -->
-		<div id="myModal" class="modal">
-			<div class="modal-content">
-				<div class="row">
-
-					<span class="close-cross col-1">&times;</span>
-
-					<div class="text-center col-11">
-						<p>Thank you!</p>
-						<p>We look forward to speaking with you.</p>
-
-						<button id="close" class="btn text-uppercase" type="button">Close</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--./modal-content-->
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 		<!-- Footer -->
 		<footer class="container-fluid text-center">
