fixed modal issue

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">\
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- Bootstrap CSS -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<script src="assets/js/maps.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
@@ -229,7 +230,7 @@
 					<p>Fill out the contact form below and we will be in touch to help you with your next highland
 						breaks.</p>
 				</div>
-
+				
 				<div id="booking-form" class="row">
 
 					<form id="booking-form-form" class="col-10 offset-1">
@@ -254,93 +255,123 @@
                             </select>
 									</div>
 									<div class="form-group">
-										<label for="details">Addition information</label>
+										<label for="details">Addition Information</label>
 										<textarea class="form-control" id="details" rows="3" name="message"></textarea>
 									</div>
 
-									<button type="submit" class="btn btn-primary">Send</button>
+									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                    Send Message</button>
 
-                    </form>
+									<!-- Modal-->
+									<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+										aria-labelledby="exampleModalLabel" aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title" id="exampleModalLabel">Thank You</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                 </button>
+												</div>
+												<div class="modal-body">
+													<p>We look forward to helping you with your next Highlands break.
+													</p>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
+									</div>
 
-								</div>
+					</form>
+				</div>
+
 		</section>
 		</main>
 		<!--./ Booking End -->
 
-		<!-- Modal -->
-<div class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<!-- Button trigger modal 
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+				<!-- Modal 
+				<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+					aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-		<!-- Footer -->
-		<footer class="container-fluid text-center">
-			<div id="footer-details" class="row">
-				<div class="col-sm-12">
-					<ul class="list-inline social-links">
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.facebook.com">
-								<i class="fa fa-facebook" aria-hidden="true"></i>
-								<span class="sr-only">Facebook</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.twitter.com">
-								<i class="fa fa-twitter" aria-hidden="true"></i>
-								<span class="sr-only">Twitter</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.pinterest.co.uk/">
-								<i class="fa fa-pinterest" aria-hidden="true"></i>
-								<span class="sr-only">Pinterest</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.instagram.com">
-								<i class="fa fa-instagram " aria-hidden="true"></i>
-								<span class="sr-only">Instagram</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.youtube.com/">
-								<i class="fa fa-youtube " aria-hidden="true"></i>
-								<span class="sr-only">YouTube</span>
-							</a>
-						</li>
-					</ul>
+							</div>
+							<div class="modal-body">
+								...
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary">Save changes</button>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-			<!-- Linked to github -->
-			<div class="col-12 text-center small">
-				<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
-			</div>
-		</footer>
-		<!--./footer end -->
 
-		<!-- Javascript Libaries -->
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-		<script
-			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&libraries=places&callback=initMap"
-			async defer></script>
-		<script>
-			$("#autocomplete").change(function() {
+				<!-- Footer -->
+				<footer class="container-fluid text-center">
+					<div id="footer-details" class="row">
+						<div class="col-sm-12">
+							<ul class="list-inline social-links">
+								<li class="list-inline-item">
+									<a target="_blank" rel="noopener" href="https://www.facebook.com">
+										<i class="fa fa-facebook" aria-hidden="true"></i>
+										<span class="sr-only">Facebook</span>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a target="_blank" rel="noopener" href="https://www.twitter.com">
+										<i class="fa fa-twitter" aria-hidden="true"></i>
+										<span class="sr-only">Twitter</span>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a target="_blank" rel="noopener" href="https://www.pinterest.co.uk/">
+										<i class="fa fa-pinterest" aria-hidden="true"></i>
+										<span class="sr-only">Pinterest</span>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a target="_blank" rel="noopener" href="https://www.instagram.com">
+										<i class="fa fa-instagram " aria-hidden="true"></i>
+										<span class="sr-only">Instagram</span>
+									</a>
+								</li>
+								<li class="list-inline-item">
+									<a target="_blank" rel="noopener" href="https://www.youtube.com/">
+										<i class="fa fa-youtube " aria-hidden="true"></i>
+										<span class="sr-only">YouTube</span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<!-- Linked to github -->
+					<div class="col-12 text-center small">
+						<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
+					</div>
+				</footer>
+				<!--./footer end -->
+
+				<!-- Javascript Libaries -->
+				<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+				<script
+					src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&libraries=places&callback=initMap"
+					async defer></script>
+				<script>
+					$("#autocomplete").change(function() {
         if ($("#autocomplete").val() != "") {
             $("#map-container").show(1000);
         } else {
@@ -349,8 +380,8 @@
     });
 
     $("#map-container").hide();
-		</script>
-		<!--./ Javascript Libaries End-->
+				</script>
+				<!--./ Javascript Libaries End-->
 </body>
 
 </html>
