added style chchanges

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">\
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<!-- Bootstrap CSS -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,6 +17,7 @@
 
 	<title>TheHighlandsBreak</title>
 
+</head>
 
 <body>
 	<!--Navigation-->
@@ -44,14 +45,12 @@
 	<!--./ end of Navigation-->
 
 	<!-- Landing picture-->
-	<section>
-		<div id="landingpicture">
-			<div class=" container text-center d-block w-100">
-				<h1>TheHighlandsBreak</h1>
-				<p>A Scottish get away!</p>
-			</div>
+	<div id="landingpicture">
+		<div class=" container text-center d-block w-100">
+			<h1>TheHighlandsBreak</h1>
+			<p>A Scottish get away!</p>
 		</div>
-	</section>
+	</div>
 	<!--./ End of Landing picture-->
 
 	<!--About-->
@@ -61,9 +60,10 @@
 		</div>
 		<div class="about-text text-center">
 			<h2>About us</h2>
-			<h3>Here at TheHighlandsBreak we want to keep the stress away!</h3>
-			<br>
-			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland.
+			<hr class="block-divider block-divider--short">
+			<p>Here at TheHighlandsBreak we want to keep the stress away!</p>
+			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland
+				for that perfect weekend.
 			</p>
 		</div>
 	</section>
@@ -108,6 +108,7 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
+		</div>
 	</section>
 	<!--./ End of Carousel -->
 	<!--Find-->
@@ -119,7 +120,7 @@
 
 		<h1>Find your break</h1>
 
-		<br>
+		<hr class="block-divider block-divider--short">
 
 		<p>Type in the city of Scotland and choose from one of the three buttons below.</p>
 		<p>You can view additional information for a venue which will be displayed above it's marker
@@ -268,14 +269,17 @@
 										<div class="modal-dialog" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
-													<h5 class="modal-title" id="exampleModalLabel">Thank You</h5>
+													<h5 class="modal-title" id="exampleModalLabel" "text-center">
+														TheHighlandsBreak</h5>
 													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                                  </button>
 												</div>
 												<div class="modal-body">
-													<p>We look forward to helping you with your next Highlands break.
-													</p>
+													<p>Thank You for booking with us,
+														<p>We look forward to helping you with your next Highlands
+															break!
+														</p>
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -308,30 +312,19 @@
 							</a>
 						</li>
 						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.pinterest.co.uk/">
-								<i class="fa fa-pinterest" aria-hidden="true"></i>
-								<span class="sr-only">Pinterest</span>
-							</a>
-						</li>
-						<li class="list-inline-item">
 							<a target="_blank" rel="noopener" href="https://www.instagram.com">
 								<i class="fa fa-instagram " aria-hidden="true"></i>
 								<span class="sr-only">Instagram</span>
 							</a>
 						</li>
-						<li class="list-inline-item">
-							<a target="_blank" rel="noopener" href="https://www.youtube.com/">
-								<i class="fa fa-youtube " aria-hidden="true"></i>
-								<span class="sr-only">YouTube</span>
-							</a>
-						</li>
 					</ul>
+					<!-- Linked to github -->
+					<div class="col-12 text-center small">
+						<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
+					</div>
 				</div>
 			</div>
-			<!-- Linked to github -->
-			<div class="col-12 text-center small">
-				<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
-			</div>
+
 		</footer>
 		<!--./footer end -->
 
