--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">\
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	<!-- Bootstrap CSS -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -18,7 +18,6 @@
 	<title>TheHighlandsBreak</title>
 
 </head>
-
 <body>
 	<!--Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
@@ -45,12 +44,12 @@
 	<!--./ end of Navigation-->
 
 	<!-- Landing picture-->
-	<div id="landingpicture">
-		<div class=" container text-center d-block w-100">
-			<h1>TheHighlandsBreak</h1>
-			<p>A Scottish get away!</p>
+		<div id="landingpicture">
+			<div class=" container text-center d-block w-100">
+				<h1>TheHighlandsBreak</h1>
+				<p>A Scottish get away!</p>
+			</div>
 		</div>
-	</div>
 	<!--./ End of Landing picture-->
 
 	<!--About-->
@@ -60,10 +59,9 @@
 		</div>
 		<div class="about-text text-center">
 			<h2>About us</h2>
-			<hr class="block-divider block-divider--short">
+             <hr class="block-divider block-divider--short">
 			<p>Here at TheHighlandsBreak we want to keep the stress away!</p>
-			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland
-				for that perfect weekend.
+			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland for that perfect weekend.
 			</p>
 		</div>
 	</section>
@@ -108,7 +106,7 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-		</div>
+            </div>
 	</section>
 	<!--./ End of Carousel -->
 	<!--Find-->
@@ -269,17 +267,15 @@
 										<div class="modal-dialog" role="document">
 											<div class="modal-content">
 												<div class="modal-header">
-													<h5 class="modal-title" id="exampleModalLabel" "text-center">
-														TheHighlandsBreak</h5>
+													<h5 class="modal-title" id="exampleModalLabel" "text-center">TheHighlandsBreak</h5>
 													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                                  </button>
 												</div>
 												<div class="modal-body">
-													<p>Thank You for booking with us,
-														<p>We look forward to helping you with your next Highlands
-															break!
-														</p>
+                                                <p>Thank You for booking with us,
+													<p>We look forward to helping you with your next Highlands break!
+													</p>
 												</div>
 												<div class="modal-footer">
 													<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -318,10 +314,10 @@
 							</a>
 						</li>
 					</ul>
-					<!-- Linked to github -->
-					<div class="col-12 text-center small">
-						<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
-					</div>
+                    			<!-- Linked to github -->
+			<div class="col-12 text-center small">
+				<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
+			</div>
 				</div>
 			</div>
 
