small changes made to html for validation

--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">\
-<link rel="shortcut icon" href="../images/favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-
 	<title>TheHighlandsBreak</title>
-
 </head>
+
 <body>
 	<!--Navigation-->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
@@ -44,12 +41,12 @@
 	<!--./ end of Navigation-->
 
 	<!-- Landing picture-->
-		<div id="landingpicture">
-			<div class=" container text-center d-block w-100">
-				<h1>TheHighlandsBreak</h1>
-				<p>A Scottish get away!</p>
-			</div>
+	<div id="landingpicture">
+		<div class=" container text-center d-block w-100">
+			<h1>TheHighlandsBreak</h1>
+			<p>A Scottish get away!</p>
 		</div>
+	</div>
 	<!--./ End of Landing picture-->
 
 	<!--About-->
@@ -59,9 +56,10 @@
 		</div>
 		<div class="about-text text-center">
 			<h2>About us</h2>
-             <hr class="block-divider block-divider--short">
+			<hr class="block-divider block-divider--short">
 			<p>Here at TheHighlandsBreak we want to keep the stress away!</p>
-			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland for that perfect weekend.
+			<p>We are here to help you quickly and easily find attractions, restaurants, bars and hotetls in Scotland
+				for that perfect weekend.
 			</p>
 		</div>
 	</section>
@@ -106,7 +104,7 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-            </div>
+		</div>
 	</section>
 	<!--./ End of Carousel -->
 	<!--Find-->
@@ -212,10 +210,9 @@
 		<!--./row-->
 		<!--Info window-->
 		<!--./Display style for info window-->
-		</section>
 		<!--./End of Find-->
 
-		<!--- Booking -->
+		<!--- Booking Form-->
 
 		<section class="form-bg">
 			<div id="book">
@@ -223,13 +220,11 @@
 			</div>
 
 			<div class="container">
-
 				<div class="booking-text text-center">
 					<h2>Book with us</h2>
 					<p>Fill out the contact form below and we will be in touch to help you with your next highland
 						breaks.</p>
 				</div>
-
 				<div id="booking-form" class="row">
 
 					<form id="booking-form-form" class="col-10 offset-1">
@@ -257,38 +252,36 @@
 										<label for="details">Addition Information</label>
 										<textarea class="form-control" id="details" rows="3" name="message"></textarea>
 									</div>
-
 									<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                                    Send Message</button>
-
-									<!-- Modal-->
-									<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-										aria-labelledby="exampleModalLabel" aria-hidden="true">
-										<div class="modal-dialog" role="document">
-											<div class="modal-content">
-												<div class="modal-header">
-													<h5 class="modal-title" id="exampleModalLabel" "text-center">TheHighlandsBreak</h5>
-													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        Send Message</button>
+					</form>
+                    </div>
+					<!-- Modal-->
+					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+						aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">
+										TheHighlandsBreak</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                                  </button>
-												</div>
-												<div class="modal-body">
-                                                <p>Thank You for booking with us,
-													<p>We look forward to helping you with your next Highlands break!
-													</p>
-												</div>
-												<div class="modal-footer">
-													<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-												</div>
-											</div>
-										</div>
-									</div>
-
-					</form>
+								</div>
+								<div class="modal-body">
+									<p>Thank You for booking with us,
+										<p>We look forward to helping you with your next Highlands
+											break!</p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-
 		</section>
-		</main>
+
 		<!--./ Booking End -->
 		<!-- Footer -->
 		<footer class="container-fluid text-center">
@@ -314,10 +307,10 @@
 							</a>
 						</li>
 					</ul>
-                    			<!-- Linked to github -->
-			<div class="col-12 text-center small">
-				<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
-			</div>
+					<!-- Linked to github -->
+					<div class="col-12 text-center small">
+						<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
+					</div>
 				</div>
 			</div>
 
