fixed about section on Navbar

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 		</div>
 	</div>
 	<!--./ End of Landing picture-->
-
 	<!--About-->
-	<section>
-		<div id="about">
+	<section id="about">
 			<a>&nbsp;</a>
 		</div>
 		<div class="about-text text-center">
