correcting footer dispay issue

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&libraries=places&callback=initMap"
 			async defer></script>
+            <!--collaps of map js-->
 		<script>
 			$("#autocomplete").change(function() {
         if ($("#autocomplete").val() != "") {
