added relevent commenting on index.html

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 					</div>
 				</div>
 		</section>
-
 		<!--./ Booking End -->
+        <!--./ Modal End -->
 		<!-- Footer -->
 		<footer class="container-fluid text-center">
 			<div id="footer-details" class="row">
